Production/Production/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>R6Service__SocialMedia</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Awaiting Customer</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Customer Responded</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agent_Comments__c</fullName>
        <label>Agent Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agent_Login__c</fullName>
        <label>Agent Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Reason__c</fullName>
        <label>Agent Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_Number__c</fullName>
        <label>Alternative Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author_Login__c</fullName>
        <label>Author Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author_Rank__c</fullName>
        <label>Author Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Board_ID__c</fullName>
        <label>Board ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLI__c</fullName>
        <label>CLI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callback_Date_Time__c</fullName>
        <inlineHelpText>Date and Time of booked callback</inlineHelpText>
        <label>Callback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Outcome__c</fullName>
        <description>Possible outcomes of raising this case</description>
        <inlineHelpText>What is the outcome of raising this case?</inlineHelpText>
        <label>Case Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boost – Add boost – Provide details of boost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call pricing – International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor comparison – provide competitor detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract - cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract – End date enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract – length of contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract – Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer looking for a better offer – provide details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer wants to cancel account – provide details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email address query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibre enquiry – package, price information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home mover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation – Powerline Adaptors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation query – Price, process, timescales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other – please insert question asked?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package details – what is included in the package ?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speed requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV – Aerial/Availability/Multi room question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV – Self install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV – Upgrade to TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV – YouView box details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to get TV or Broadband – Select reason below</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VLR – Adding VLR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VLR – Payment issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VLR – Pricing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Sub_Origin__c</fullName>
        <label>Case Sub Origin</label>
        <picklist>
            <controllingField>Origin</controllingField>
            <picklistValues>
                <fullName>Twitter @mention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter @aolcareuk Mentions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter AOL Mentions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChatKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>ChatKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Chordiant_Account_Number__c</fullName>
        <label>Chordiant Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Comments__c</fullName>
        <label>Close Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <inlineHelpText>Reason for closing the case</inlineHelpText>
        <label>Close Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalation form completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer to call Contact Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Gone Away</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call-back Booked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_ID__c</fullName>
        <label>Community ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_URL__c</fullName>
        <label>Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Complaint_Reference__c</fullName>
        <inlineHelpText>Trio Complaint Reference.</inlineHelpText>
        <label>Complaint Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Account Customer Number.</description>
        <formula>Account.Customer_Number__c</formula>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPA_Status__c</fullName>
        <label>DPA Status</label>
        <picklist>
            <picklistValues>
                <fullName>DPA Not Checked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DPA Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPA Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Response_Time__c</fullName>
        <formula>(( First_Response__c -  CreatedDate)*1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Response__c</fullName>
        <label>First Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Jigsaw_Reference__c</fullName>
        <inlineHelpText>Reference to the TalkTalk Jigsaw system</inlineHelpText>
        <label>Jigsaw Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>An external Id used in code</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Li_Community_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community User</label>
        <referenceTo>Li_Community_User__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Live_Chat_Current_Site__c</fullName>
        <label>Live Chat Current Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Posted__c</fullName>
        <label>Message Posted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owned_by_Queue__c</fullName>
        <formula>IF(ISBLANK(Owner:User.Id),True,False)</formula>
        <label>Owned by Queue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_OwnerId__c</fullName>
        <description>The Previous OwnerId before the Case is Reassigned via GetNext, usually a QueueId</description>
        <label>Previous OwnerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__InitialPostId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the ID of the post that spawned this case.</description>
        <inlineHelpText>The social media post that raised this issue.</inlineHelpText>
        <label>Initial Post</label>
        <referenceTo>SocialPost</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R6Service__MediaIconResource__c</fullName>
        <description>A formula used by the media icon. Should not be made visible.</description>
        <formula>IF(CONTAINS(UPPER(R6Service__MediaProvider__c), &apos;TWITTER&apos;), &apos;/resource/R6Service__Twitter_Logo&apos;, 
IF(CONTAINS(UPPER(R6Service__MediaProvider__c), &apos;FACEBOOK&apos;), &apos;/resource/R6Service__Facebook_Logo&apos;, 
IF(CONTAINS(UPPER(R6Service__MediaProvider__c), &apos;YOUTUBE&apos;), &apos;/resource/R6Service__MediaTypeYouTubeIcon&apos;, 
CASE(UPPER(R6Service__MediaType__c), 
&apos;BLOGS&apos;, &apos;/resource/R6Service__MediaTypeBlogIcon&apos;, 
&apos;VIDEOS&apos;, &apos;/resource/R6Service__MediaTypeVideoIcon&apos;, 
&apos;IMAGES&apos;, &apos;/resource/R6Service__MediaTypeImageIcon&apos;, 
&apos;MAINSTREAM NEWS&apos;, &apos;/resource/R6Service__MediaTypeNewsIcon&apos;, 
&apos;MICROMEDIA&apos;, &apos;/resource/R6Service__MediaTypeMicromediaIcon&apos;, 
&apos;FORUM&apos;, &apos;/resource/R6Service__MediaTypeForumIcon&apos;, 
&apos;COMMENTS&apos;, &apos;/resource/R6Service__MediaTypeCommentIcon&apos;, 
&apos;/resource/R6Service__DefaultChannelLogo&apos; 
))))</formula>
        <label>Media Icon Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__MediaIcon__c</fullName>
        <description>The icon that represents the medium that initiated the case. This will be the provider&apos;s logo for common providers, or generic media type logos for less popular providers.</description>
        <formula>IMAGE(R6Service__MediaIconResource__c, R6Service__MediaType__c +&quot;/&quot; + R6Service__MediaProvider__c, 48, 48)</formula>
        <inlineHelpText>The media provider or media type of the post that initiated the case.</inlineHelpText>
        <label>Media Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__MediaProvider__c</fullName>
        <description>The media provider of the post that initiated this case.</description>
        <inlineHelpText>The social network of the post that initiated this case. For example: Facebook, Twitter, Youtube or Myspace.</inlineHelpText>
        <label>Media Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__MediaType__c</fullName>
        <description>The media type for the post that initiated this case.</description>
        <inlineHelpText>The media type of the media provider. For example: Youtube is a &quot;video&quot; media type while Twitter is &quot;micromedia&quot;.</inlineHelpText>
        <label>Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__PersonaAvatar__c</fullName>
        <description>Profile picture of the persona for whom the case was created, if the picture can be found.</description>
        <formula>IF(ISBLANK(R6Service__SocialPersona__c), R6Service__InitialPostId__r.Persona.R6Service__Avatar__c, R6Service__SocialPersona__r.R6Service__Avatar__c)</formula>
        <inlineHelpText>User&apos;s profile picture, if it can be found.</inlineHelpText>
        <label>Avatar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__RecipientSMMA__c</fullName>
        <label>Recipient Social Media Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R6Service__SM_Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DO NOT USE. This field relates to an object that is no longer supported.</description>
        <inlineHelpText>DO NOT USE. This field relates to an object that is no longer supported.</inlineHelpText>
        <label>(DO NOT USE) Persona</label>
        <referenceTo>R6Service__Persona__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R6Service__SocialPersona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the SocialPerson that made the post that generated the case.</description>
        <inlineHelpText>The Social Persona that generated the case.</inlineHelpText>
        <label>Social Persona</label>
        <referenceTo>SocialPersona</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TalkTalk_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TalkTalk Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thread_ID__c</fullName>
        <label>Thread ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Live_Agent_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Live Chat</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Resolved</value>
        </filters>
        <label>Live Agent Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Social_Media_Facebook_Case_Queue</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Resolved,Closed</value>
        </filters>
        <label>Social Media Facebook Case Queue</label>
        <queue>Social_Media_Facebook_Case_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Social_Media_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Social Media</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Resolved</value>
        </filters>
        <label>Social Media Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Social_Media_Other_Case_Queue</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Resolved,Closed</value>
        </filters>
        <label>Social Media Other Case Queue</label>
        <queue>Social_Media_Other_Case_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TalkTalk_Community_Case_Queue</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Resolved,Closed</value>
        </filters>
        <label>TalkTalk Community Case Queue</label>
        <queue>TalkTalk_Community_Case_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TalkTalk_Community_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>Board_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>TalkTalk Community</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Resolved</value>
        </filters>
        <label>Community Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Twitter_TalkTalk_Mentions</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Resolved</value>
        </filters>
        <label>Twitter TalkTalk Mentions</label>
        <queue>Twitter_TalkTalk_Mentions</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Twitter_talktalkcare_Mentions</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Resolved</value>
        </filters>
        <label>Twitter @talktalkcare Mentions</label>
        <queue>Twitter_talktalkcare_Mentions</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Collection</fullName>
        <active>true</active>
        <businessProcess>R6Service__SocialMedia</businessProcess>
        <label>Collection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live_Agent</fullName>
        <active>true</active>
        <businessProcess>R6Service__SocialMedia</businessProcess>
        <description>Case record type for Live Chat</description>
        <label>Live Agent</label>
    </recordTypes>
    <recordTypes>
        <fullName>R6Service__SocialMedia</fullName>
        <active>true</active>
        <businessProcess>R6Service__SocialMedia</businessProcess>
        <label>Social Media</label>
    </recordTypes>
    <recordTypes>
        <fullName>TalkTalk_Community</fullName>
        <active>true</active>
        <businessProcess>R6Service__SocialMedia</businessProcess>
        <description>Case record type for the TalkTalk Lithium Community</description>
        <label>TalkTalk Community</label>
    </recordTypes>
</CustomObject>